--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,13 @@
             android:shadowDy="1.0"
             android:shadowRadius="1.0"
             android:textColor="#000000"
-            android:background="#FFFFFF"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/line"
             android:layout_width="1dip"
             android:layout_height="match_parent"
             android:layout_alignRight="@id/container"
-            android:background="#000000"
             android:visibility="gone" />
 
     </RelativeLayout>
@@ -51,14 +48,6 @@
         android:orientation="vertical"
         android:padding="3dip" >
 
-
-        <ImageView
-            android:id="@+id/new_page"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
-            android:scaleType="center"
-            android:background="@drawable/toolbox_selector"
-            android:src="@drawable/page_add" />
 
 
         <ImageView
@@ -108,6 +97,64 @@
             android:padding="3dip"
             android:scaleType="center"
             android:src="@drawable/ic_clear" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/parent"
+        android:gravity="right|center_vertical"
+        android:orientation="horizontal"
+        android:padding="5dip" >
+
+
+
+        <ImageView
+            android:id="@+id/undo"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:background="@drawable/page_selector"
+            android:padding="3dip"
+            android:scaleType="center"
+            android:src="@drawable/ic_undo" />
+
+
+        <TextView
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:text="1"
+            android:id="@+id/pagenumber" />
+
+        <ImageView
+            android:id="@+id/redo"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:background="@drawable/page_selector"
+            android:padding="3dip"
+            android:scaleType="center"
+            android:src="@drawable/ic_redo" />
+
+
+        <ImageView
+            android:id="@+id/new_page"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:background="@drawable/page_selector"
+            android:scaleType="center"
+            android:src="@drawable/page_add" />
+
+
+        <ImageView
+            android:id="@+id/page"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:background="@drawable/page_selector"
+            android:scaleType="center"
+            android:src="@drawable/page_preview" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
